5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1800_2563.log
== TEST (2019-06-11 10:39:06) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]>=5 and v[n]<7):
		c = c+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:39:55) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n>=size(v)):
	if(v[n]>=5 and v[n]<7):
		c = c+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:41:18) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]>=5 and v[n]<7):
		c = c+1
	n = n +1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:28) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]>=5 and v[n]<7):
		c = c+1
	else:
	n = n +1
print(c)
-- ERROR:
File "XXXX", line 9
    n = n +1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:43:13) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]>=5 and v[n]<7):
		c = c+1
	n = n +1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:43:22) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]>=5 and v[n]<7):
		c = c+1
	n = n +1
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:45:29) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if((v[n])>=5 and (v[n])<7):
		c = c+1
	n = n +1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:45:51) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]>=5 and v[n]<7):
		c = c+1
	n = n +1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:46:33) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]>=5 and v[n]<7):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:48:34) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(5<=v[n]<7):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:49:45) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]<7 and v[n]>5):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:20) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<=size(v)):
	if(v[n]<7) and (v[n]>5):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:54:14) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<size(v)):
	if(v[n]<7) and (v[n]>5):
		c = c+1
	n = n + 1
print(c)
-- EXECUTION TIME:
0.928761
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:54:16) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<size(v)):
	if(v[n]<7) and (v[n]>5):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:54:39) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<size(v)):
	if(v[n]<7) and (v[n]=>5):
		c = c+1
	n = n + 1
print(c)
-- EXECUTION TIME:
0.836018
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 6
    if(v[n]<7) and (v[n]=>5):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:54:45) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<size(v)):
	if(v[n]<7) and (v[n]=>5):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
File "XXXX", line 6
    if(v[n]<7) and (v[n]=>5):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:55:07) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<size(v)):
	if(v[n]<7) and (v[n]>=5):
		c = c+1
	n = n + 1
print(c)
-- EXECUTION TIME:
0.905003
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:55:10) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<size(v)):
	if(v[n]<7) and (v[n]>=5):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:55:32) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<size(v)):
	if(v[n]<7) and (v[n]>=5):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:55:52) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(n<size(v)):
	if(v[n]<7) and (v[n]>=5):
		c = c+1
	n = n + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:59:44) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(size(v)>1):	
	while(n<size(v)):
		if(v[n]<7) and (v[n]>=5):
			c = c+1
		n=n+1
	print(c)
	v = array(eval(input("Notas: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:00:14) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(size(v)>1):	
	while(n<size(v)):
		if(v[n]<7) and (v[n]>=5):
			c = c+1
		n=n+1
	print(c)
	v = array(eval(input("Notas: ")))
-- EXECUTION TIME:
0.965872
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
6
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
11
11
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:01:21) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
while(size(v)>1):	
	while(n<size(v)):
		if(v[n]<7) and (v[n]>=5):
			c = c+1
		n=n+1
	v = array(eval(input("Notas: ")))
	print(c)
-- EXECUTION TIME:
1.20801
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
6
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
11
11
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:05:17) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
n = 0
c = 0
f = 0
while(size(v)>1):	
	while(n<size(v)):
		if(v[n]<7) and (v[n]>=5):
			c = c+1
		n=n+1
	v = array(eval(input("Notas: ")))
print(c)

	
-- EXECUTION TIME:
0.877071
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Notas: Notas: Notas: 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:18:40) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
c = 0
f = 0
while(size(v)>1):	
	for n in size(v)
		if(n < 7) and (n >=5):
			c = c+1
		print(c)
	v = array(eval(input("Notas: ")))


	
-- ERROR:
File "XXXX", line 6
    for n in size(v)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:18:54) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
c = 0
f = 0
while(size(v)>1):	
	for n in v
		if(n < 7) and (n >=5):
			c = c+1
		print(c)
	v = array(eval(input("Notas: ")))


	
-- ERROR:
File "XXXX", line 6
    for n in v
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:21:51) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
c = 0
f = 0
while(size(v)>1):	
	for n in range(size(v))
		if(n < 7) and (n >=5):
			c = c+1
		print(c)
	v = array(eval(input("Notas: ")))


	
-- ERROR:
File "XXXX", line 6
    for n in range(size(v))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:22:28) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))
c = 0
f = 0
while(size(v)>1):	
	for n in arange(size(v))
		if(n < 7) and (n >=5):
			c = c+1
		print(c)
	v = array(eval(input("Notas: ")))


	
-- ERROR:
File "XXXX", line 6
    for n in arange(size(v))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:25:52) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for n in vet:
      if (n>=5 and n<7):
         npar = npar + 1
   print(npar)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:29:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for n in vet:
      if (n>=5 and n<7):
         npar = npar + 1
   print(npar)



	
-- EXECUTION TIME:
216.324
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:41:41) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for n in vet:
      if (n>=5 and n<7):
         npar = npar + 1
   print(npar)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:42:40) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for n in vet:
      if (n>=5 and n<7):
         npar = npar + 1
   print(npar)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:48:04) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for n in vet:
      if (n>=5 and n<7):
         npar = npar + 1
print(npar)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:49:01) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for n in vet:
      if (n>=5 and n<7):
         npar = npar + 1
	print(npar)



	
-- ERROR:
File "XXXX", line 8
    print(npar)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:49:25) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for n in vet:
      if (n>=5 and n<7):
         npar = npar + 1
		print(npar)



	
-- ERROR:
File "XXXX", line 8
    print(npar)
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
